Samples/Errors/RedeclarationOfConstants.gs
//This is a G# program with errors.

b = 3;
b = 4;//Redeclaration of constants is not allowed. Even when the constant is on an outer scope.